Put Rol Operational
